loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:6: error: not found: value place0
  for (pos <- 0 to place0) {
                   ^